--- a/bc/static_src/sass/components/_hero.scss
+++ b/bc/static_src/sass/components/_hero.scss
@@ -94,7 +94,6 @@
 
     &--jobs {
         background-color: $color--light-grey;
-        margin-bottom: $grid--large;
 
         @include media-query(tablet-landscape) {
             position: relative;
